<resources>
    <string name="app_name" translatable="false">Qaree</string>
    <string name="default_notification_channel_id" translatable="false">Qaree notification</string>
    <string name="skip">Skip</string>
    <string name="easy_search">Easy Search</string>
    <string name="read_anytime_any_where"><![CDATA[Read Anytime & Any Where]]></string>
    <string name="read_anytime_and_any_where_using_your_mobile_to_buy_the_books">Read anytime and any where using your mobile to buy the books</string>
    <string name="search_on_easy_to_find_the_books_with_the_help_of_categories">Search on easy to find the books with the help of categories</string>
    <string name="all_the_books_that_you_purchased_will_store_in_the_my_books_it_can_access_by_any_device">All the books that you purchased will store in the my books. it can access by any device</string>
    <string name="personal_library">Personal Library</string>
    <string name="get_started">Get Started</string>
    <string name="next">next</string>
    <string name="sign_in">Sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">**********</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="create_account">Create Account</string>
    <string name="fill_your_information_below_or_register_with_your_social_account">Fill your information below or register with your social account</string>
    <string name="name">Name</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="please_enter_the_e_mail">Please enter the E-mail</string>
    <string name="e_mail_address_is_not_valid">E-mail address is not valid</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="the_password_is_not_valid">The password is not valid</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_full_name">Please enter your full-name</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_enter_the_code_we_just_sent_to_email">Please enter the code we just sent to email</string>
    <string name="didn_t_receive_otp">Didn’t receive OTP?</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="verify">Verify</string>
    <string name="the_otp_is_not_valid">The otp is not valid</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="creat_new_password">Creat New Password</string>
    <string name="Creat_new_password">Creat_new_password</string>
    <string name="your_new_password_must_be_different_from_previosly_used_password">Your new password must be different from previosly used password</string>
    <string name="your_new_password_must_be_different_from_previously_used_password">your_new_password_must_be_different_from_previously_used_password</string>
    <string name="Your_new_password_must_be_different_from_previously_used_password">your new password must be different from previously used password</string>
    <string name="create_new_password">Create new password</string>
    <string name="forget_password">Forget Password</string>
    <string name="request_changing_password">Request changing password</string>
    <string name="submit">Submit</string>
    <string name="special_offers">Special Offers</string>
    <string name="top_authors">Top Authors</string>
    <string name="new_releases">New Releases</string>
    <string name="activities">Activities</string>
    <string name="item_name">item name</string>
    <string name="current_reading">Current Reading</string>
    <string name="want_to_read">Want to read</string>
    <string name="adding">+</string>
    <string name="finished_reading">Finished Reading</string>
    <string name="the_password_is_not_matches_the_confirmation_password">The password is not matches the confirmation password</string>
    <string name="current_Reading">Current reading</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="chat">Chat</string>
    <string name="offer_image">offer image</string>
    <string name="book_image">Book image</string>
    <string name="author_image">author image</string>
    <string name="categories">Categories</string>
    <string name="category_image">Category image</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="read">Read</string>
    <string name="book_info">Book info.</string>
    <string name="to_delete_this_book">to delete this book</string>
    <string name="book_name">Book Name</string>
    <string name="enter_book_name">Enter book name</string>
    <string name="science">science</string>
    <string name="history">history</string>
    <string name="offer_price">%s LE</string>
    <string name="offer_percent">%s off</string>
    <string name="reading_percent">%s %%</string>
    <string name="add_shelf">Add shelf</string>
    <string name="more">More</string>
    <string name="search">search</string>
    <string name="browse_any_category">Browse any category</string>
    <string name="shelf_books">Shelf books</string>
    <string name="enter_the_shelf_name">Enter the shelf name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="books_number">%s Books</string>
    <string name="back_button">Back button</string>
    <string name="category">Category</string>
    <string name="to_return_to_the_previous_page">To return to the previous page</string>
    <string name="notifications">Notifications</string>
    <string name="to_open_more_options">to open more options</string>
    <string name="please_enter_shelf_name">Please enter shelf name</string>
    <string name="shelf_name_should_be_more_than_5_chars">Shelf name should be more than 5 chars</string>
    <string name="Book_info">Book info</string>
    <string name="the_book_cover">the book cover</string>
    <string name="buy">Buy</string>
    <string name="to_go_to_book_community">to go to book community</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="post">Post</string>
    <string name="reviews">Reviews</string>
    <string name="My_profile">My Profile</string>
    <string name="to_go_to_setting">to go to setting</string>
    <string name="my_name">my name</string>
    <string name="reading_is_amazing_hobby">reading is amazing hobby</string>
    <string name="settings">Settings</string>
    <string name="default_image">Default image</string>
    <string name="for_test">for test</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="payment">Payment</string>
    <string name="personalization">Personalization</string>
    <string name="language">Language</string>
    <string name="Notifications">Notifications</string>
    <string name="More">More</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="to_log_out">to log out</string>
    <string name="dark_mode">Dark mode</string>
    <string name="edit_my_photo">edit my photo</string>
    <string name="Name">Name</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="bio">Bio</string>
    <string name="what_do_you_want_to_write">what do you want to write</string>
    <string name="E_mail">E-mail</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="author_name">By %1$s</string>
    <string name="year">year</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="ratings">(%1$s Ratings)</string>
    <string name="please_enter_your_comment">Please Enter your comment</string>
    <string name="please_enter_valid_comment">Please enter valid comment</string>
    <string name="please_enter_your_rate">Please Enter your rate</string>
    <string name="user_image">User Image</string>
    <string name="to_follow_me">to follow me</string>
    <string name="follow">Follow</string>
    <string name="to_message_me">to message me</string>
    <string name="message">Message</string>
    <string name="to_edit">to edit</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_image_selected">No image selected</string>
    <string name="please_enter_the_bio">please enter the bio</string>
    <string name="th_bio_is_very_short">Th bio is very short</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="please_enter_your_old_password">Please enter your old password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="the_password_should_not_be_less_than_6_letters">the password should not be less than 6 letters</string>
    <string name="the_repeated_password_does_not_matches_the_password">The repeated password does not matches the password</string>
    <string name="the_password_changed_successfully">The password Changed successfully</string>
    <string name="start_read">Start Read</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="read_sample">Read sample</string>
    <string name="add_to_shelf">Add to shelf</string>
    <string name="add_to">Add to ...</string>
    <string name="community">Community</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="delete_account_dialog">Delete Account?</string>
    <string name="delete_account_details">The account details will be removed from our app and you will not be able to login again</string>
    <string name="delete">Delete</string>
</resources>